Prevent footer from covering content on the sign in page.

--- a/app/assets/stylesheets/hyrax/_footer.scss
+++ b/app/assets/stylesheets/hyrax/_footer.scss
@@ -41,5 +41,8 @@ body {
   }
   .site-footer {
     height: 2 * $footer-height;
+    // This prevents the footer from covering the sign in
+    // button on the login page
+    bottom: auto;
   }
 }
